// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dialog> renders 1`] = `
<View
  collapsable={undefined}
  pointerEvents="none"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.5)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    collapsable={undefined}
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 3,
        "bottom": -1334,
        "maxHeight": "65%",
        "minWidth": "35%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
      }
    }
  >
    <RCTScrollView
      onScroll={[Function]}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 16,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;

exports[`<Dialog> when {title} 1`] = `
<View
  collapsable={undefined}
  pointerEvents="none"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.5)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 0,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    collapsable={undefined}
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 3,
        "bottom": -1334,
        "maxHeight": "65%",
        "minWidth": "35%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "color": "#4a4a4a",
          "flex": 1,
          "fontFamily": undefined,
          "fontSize": 20,
          "fontWeight": "bold",
          "lineHeight": 20.8,
          "padding": 16,
        }
      }
    >
      Hello world
    </Text>
    <RCTScrollView
      onScroll={[Function]}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 16,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;

exports[`<Dialog> when {visible} 1`] = `
<View
  collapsable={undefined}
  pointerEvents="auto"
  style={
    Object {
      "alignContent": "center",
      "alignItems": "center",
      "backgroundColor": "rgba(0,0,0,0.5)",
      "height": "100%",
      "justifyContent": "center",
      "left": 0,
      "opacity": 1,
      "position": "absolute",
      "top": 0,
      "width": "100%",
      "zIndex": 2,
    }
  }
>
  <View
    collapsable={undefined}
    pointerEvents="auto"
    style={
      Object {
        "backgroundColor": "#ffffff",
        "borderRadius": 3,
        "bottom": 0,
        "maxHeight": "65%",
        "minWidth": "35%",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.26,
        "shadowRadius": 5,
      }
    }
  >
    <RCTScrollView
      onScroll={[Function]}
      style={
        Object {
          "flex": 1,
          "paddingHorizontal": 16,
        }
      }
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;
